--- a/Starter_Code/wholesale_data_analysis_starter_code.ipynb
+++ b/Starter_Code/wholesale_data_analysis_starter_code.ipynb
@@ -1822,7 +1822,7 @@
     "            #dfmi.loc[:, ('one', 'second')]\n",
     "            #print(conversion(summary_data_df.iloc[:,x][y]))\n",
     "            hold = conversion(summary_data_df.iloc[:,x][y])\n",
-    "            summary_data_df.iloc[:,x][y] = hold"
+    "            summary_data_df.iloc[:,x][y] = hold\n"
    ]
   },
   {
@@ -2053,7 +2053,9 @@
    "id": "d390a942-84db-494a-b5e9-f7bfba4c5738",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "By sorting the clients by total profit, Client 24741 made 12 times more in total profits than the next highest earner. Comparing the total profit to  the revenue before cost, it's clear that shipping and production take moste of the initial sales amount."
+   ]
   }
  ],
  "metadata": {
